[gd_scene load_steps=3 format=3 uid="uid://cmfgcifdsk7jj"]

[ext_resource type="Script" uid="uid://jh7fprsnebrg" path="res://scenes/characters/player/player.gd" id="1_yewv4"]
[ext_resource type="Texture2D" uid="uid://cma4sjilt2lxs" path="res://assets/sprites/tile-select-button.png" id="2_yewv4"]

[node name="Player" type="Node2D"]
script = ExtResource("1_yewv4")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValidTileCheck" type="Node2D" parent="."]
position = Vector2(8, 8)
metadata/_edit_group_ = true

[node name="TileUp" type="RayCast2D" parent="ValidTileCheck"]
target_position = Vector2(0, -16)

[node name="TileDown" type="RayCast2D" parent="ValidTileCheck"]
target_position = Vector2(0, 16)

[node name="TileLeft" type="RayCast2D" parent="ValidTileCheck"]
target_position = Vector2(-16, 0)

[node name="TileRight" type="RayCast2D" parent="ValidTileCheck"]
target_position = Vector2(16, 0)

[node name="ButtonUp" type="Button" parent="." groups=["buttons"]]
offset_left = -4.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 4.0
icon = ExtResource("2_yewv4")
flat = true
metadata/_edit_use_anchors_ = true

[node name="ButtonDown" type="Button" parent="."]
offset_left = -4.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 36.0
icon = ExtResource("2_yewv4")
flat = true

[node name="ButtonLeft" type="Button" parent="."]
offset_left = -20.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 20.0
icon = ExtResource("2_yewv4")
flat = true

[node name="ButtonRight" type="Button" parent="."]
offset_left = 12.0
offset_top = -4.0
offset_right = 36.0
offset_bottom = 20.0
icon = ExtResource("2_yewv4")
flat = true

[connection signal="pressed" from="ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="ButtonDown" to="." method="_on_button_down_pressed"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_button_right_pressed"]
